<resources>
    <string name="app_name">Break Loop</string>
    <string name="app_description">Break the loop of distractions, reclaim your focus</string>
    <string name="grant_usage_access">Grant Usage Access</string>
    <string name="select_apps_to_block">Select Apps to Block</string>
    <string name="set_time_limits">Set Time Limits</string>
    <string name="test_blocking_system">Test Blocking System</string>
    <string name="save_selection">Save Selection</string>
    <string name="save_time_limits">Save Time Limits</string>
    <string name="app_blocked_title">App Blocked!</string>
    <string name="app_blocked_message">You\'ve reached your daily time limit.\n\nTaking a break is good for you! 😊\n\nTime to focus on what really matters.</string>
    <string name="redirecting_message">Redirecting in %1$d seconds...</string>
    <string name="go_to_home">Go to Home</string>
    <string name="current_status">Current Status</string>
    <string name="setup_configuration">Setup &amp; Configuration</string>
    <string name="testing">Testing</string>
    <string name="available_apps">Available Apps</string>
    <string name="selected_apps">Selected Apps</string>
    <string name="daily_limit_minutes">Daily limit in minutes</string>
    <string name="minutes">Minutes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

      <string name="title_dashboard">Dashboard</string>
        <string name="title_progress_report">Progress</string>
        <string name="title_scheduling">Scheduling</string>
        <string name="title_notes">Journal &amp; Notes</string>
        <string name="nav_title_progress_report">Progress Report</string>
        <string name="nav_title_account">Account</string>
        <string name="nav_title_profile">Profile</string>
        <string name="nav_title_logout">Logout</string>
        
    <!-- Splash Screen Quotes -->
    <string name="splash_quote_1">Break the loop of distractions,\nreclaim your focus</string>
    <string name="splash_quote_2">The only way to do great work is to love what you do</string>
    <string name="splash_quote_3">Believe you can and you\'re halfway there</string>
    <string name="splash_quote_4">The future belongs to those who believe in the beauty of their dreams</string>
    <string name="splash_quote_5">Strive not to be a success, but rather to be of value</string>
    <string name="splash_quote_6">The best way to predict the future is to create it</string>
    <string name="splash_quote_7">Focus on being productive instead of busy</string>
    <string name="splash_quote_8">Your time is limited, don\'t waste it living someone else\'s life</string>
    <string name="splash_quote_9">Success is not final, failure is not fatal: it is the courage to continue that counts</string>
    <string name="splash_quote_10">The way to get started is to quit talking and begin doing</string>

    <string-array name="motivational_quotes">
        <item>The only way to do great work is to love what you do.</item>
        <item>Believe you can and you\'re halfway there.</item>
        <item>The future belongs to those who believe in the beauty of their dreams.</item>
        <item>Strive not to be a success, but rather to be of value.</item>
        <item>The best way to predict the future is to create it.</item>
    </string-array>
    <string name="hint_task_name">Task name</string>
    <string name="hint_task_description">Description (optional)</string>
    <string name="label_no_due">No due date</string>
    <string name="btn_pick_due">Pick due</string>
    <string name="btn_clear_due">Clear due date</string>
    <string name="btn_add_task">Add task</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="error_task_name_required">Task name is required</string>
    <string name="msg_task_added">Task added</string>
    <string name="msg_task_updated">Task updated</string>
    <string name="hint_edit_mode">Editing existing task. Tap + to save changes.</string>
    <string name="exit_app">Exit App</string>
</resources>